# r-polars

./: .Rbuildignore  .ecrc  .editorconfig  .gitignore  .lintr.R  .lycheeignore  .mega-linter.yml  .yamllint.yml  CRAN-SUBMISSION  DESCRIPTION  DEVELOPMENT.md  LICENSE  LICENSE.md  LICENSE.note  Makefile  NAMESPACE  NEWS.0.md  NEWS.md  NOTES.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  air.toml  bootstrap.R  cleanup  cleanup.win  configure  configure.win  cran-comments.md  flake.nix  jarl.toml  make-docs.R  notes_changes.txt.R  performance.Rmd  performance.md  test.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/scripts/: generate-lib-sums.mjs
.github/workflows/: build-docs.yml  build-lib-sums.yml  build-wasm.yml  cachix.yml  check.yaml  copilot-setup-steps.yml  cross-compile.yaml  cross_compile_release.yaml  docs-release.yaml  docs.yaml  documentation.yaml  documentation.yml  flake.yml  lint-mega-linter.yaml  lint-pr.yml  lint-r.yml  lint-rust.yml  mega-linter.yaml  msrv.yaml  pkgdown.yaml  r-universe-test.yml  release-lib.yaml  release-lib.yml  release.txt  release.yaml  release_cross_compiled.yaml  test-docs.yml  test-r-universe.yml  test-r.yml  test-rust.yml
R/: 000-utils-s7.R  000-wrappers.R  001-wrappers.R  Field.R  PTime.R  aaa.R  after-wrappers.R  api.R  as_polars.R  as_polars_df.R  as_polars_dtype_expr.R  as_polars_expr.R  as_polars_lf.R  as_polars_selector.R  as_polars_series.R  autocompletion.R  check_polars.R  config.R  construction.R  convert.R  csv.R  dataframe-frame.R  dataframe-group_by-general.R  dataframe-group_by-rolling.R  dataframe-group_by.R  dataframe-group_by_dynamic.R  dataframe-html.R  dataframe-s3-arrow.R  dataframe-s3-base.R  dataframe-s3-knitr.R  dataframe-s3-nanoarrow.R  dataframe-s3-reticulate.R  dataframe-s3-tibble.R  dataframe-s3-waldo.R  dataframe-to_r_list.R  dataframe.R  dataframe__frame.R  dataframe_frame.R  datatype-expr-expr.R  datatype-expr-s3-base.R  (+190 more)
altdoc/: about.md  altdoc_postprocessing.R  altdoc_preprocessing.R  freeze.rds  mkdocs.yml  mkdocs_static.yml  pkgdown.yml  preamble_man_qmd.yml  preamble_vignettes_qmd.yml  preamble_vignettes_rmd.yml  reference_home.Rmd  reference_home.md
altdoc/stylesheets/: extra.css
dev/: dashboard.Rmd  develop_polars.R  generate-lib-sums.R  py_polars_functions_and_args.csv  py_polars_functions_and_args.py  r_polars_functions_and_args.R  readme.md  styler_utils.R
dev/generate-r-files/: generate-polars-version.R  generate-s3methods-dollar.R
docs/: .gitignore  about.md  make-docs.R  mkdocs.orig.yml  mkdocs.yml
docs/docs/: NEWS.md  README.md  about.md  reference.md  reference_home.Rmd  reference_home.md
docs/site/: 404.html  index.html  sitemap.xml
inst/: WORDLIST
inst/misc/: Makevars_symlinking  (+7 more)
man/: .gitignore  DataFrame-class.Rd  DataFrame-shape.Rd  DataFrame.Rd  DataFrame_as_data_frame.Rd  DataFrame_cast.Rd  DataFrame_class.Rd  DataFrame_clear.Rd  DataFrame_clone.Rd  DataFrame_columns.Rd  DataFrame_constructor.Rd  DataFrame_describe.Rd  DataFrame_drop.Rd  DataFrame_drop_in_place.Rd  DataFrame_drop_nulls.Rd  DataFrame_dtype_strings.Rd  DataFrame_dtypes.Rd  DataFrame_equals.Rd  DataFrame_estimated_size.Rd  DataFrame_explode.Rd  DataFrame_export_stream.Rd  DataFrame_fetch.Rd  DataFrame_fill_nan.Rd  DataFrame_fill_null.Rd  DataFrame_filter.Rd  DataFrame_first.Rd  DataFrame_flags.Rd  DataFrame_frame_equal.Rd  DataFrame_gather_every.Rd  DataFrame_get_column.Rd  DataFrame_get_columns.Rd  DataFrame_glimpse.Rd  DataFrame_group_by.Rd  DataFrame_group_by_dynamic.Rd  DataFrame_groupby.Rd  DataFrame_head.Rd  DataFrame_height.Rd  DataFrame_item.Rd  DataFrame_join.Rd  DataFrame_join_asof.Rd  (+1859 more)
misc/: hello_renv.R  notes.txt  tpch_test.R
renv/: activate.R  settings.dcf
src/: .gitignore  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.in  entrypoint.c  init.c  minipolars-win.def  neopolars-win.def  polars-win.def
src/rust/: Cargo.toml  api.h  build.rs  rust-toolchain.toml
src/rust/src/: allocator.rs  concat.rs  concurrent.rs  construct_expr.rs  conversion.rs  conversion_r_to_s.rs  conversion_s_to_r.rs  datatypes.rs  error.rs  fast_roll.rs  info.rs  lazygroupby.rs  lib.rs  on_startup.rs  prelude.rs  r_threads.rs  r_udf.rs  ranyhow.rs  rbackground.rs  rdatatype.rs  rerr.rs  rlazyframe.rs  rlib.rs  rpolarserr.rs  rstringcache.rs  rthreadhandle.rs  series.rs  sql.rs  warn.rs
src/rust/src/arrow_interop/: mod.rs  to_rust.rs
src/rust/src/conversion/: base_date.rs  categorical.rs  chunked_array.rs  clock.rs  data_table.rs  mod.rs  s7.rs
src/rust/src/dataframe/: general.rs  io.rs  mod.rs  serde.rs
src/rust/src/expr/: array.rs  binary.rs  bitwise.rs  categorical.rs  datatype.rs  datetime.rs  general.rs  list.rs  meta.rs  mod.rs  name.rs  rolling.rs  selector.rs  serde.rs  string.rs  struct.rs  struct_.rs
src/rust/src/functions/: aggregation.rs  eager.rs  io.rs  lazy.rs  mod.rs  range.rs  whenthen.rs
src/rust/src/io/: mod.rs  sink_options.rs  sink_output.rs
src/rust/src/lazy/: construct_expr.rs  dataframe.rs  dsl.rs  meta.rs  mod.rs  utils.rs  whenthen.rs
src/rust/src/lazyframe/: export.rs  general.rs  mod.rs  optflags.rs  serde.rs  sink.rs
src/rust/src/map/: lazy.rs
src/rust/src/rdataframe/: binary.rs  concurrent.rs  mod.rs  r_to_series.rs  read_csv.rs  read_ipc.rs  read_ndjson.rs  read_parquet.rs  rexpr.rs  rseries.rs  series_to_r.rs  wrap_errors.rs
src/rust/src/series/: arithmetic.rs  construction.rs  export.rs  general.rs  import.rs  mod.rs
src/rust/src/utils/: extendr_concurrent.rs  extendr_helpers.rs  handle_thread_r_requests.rs  mod.rs  wrappers.rs
test/: R_behavior.R  example.R  example_minipolars.html  example_minipolars.md  example_minipolars.rmd  noteshackingutils.R  pypolars_behavior.py  rough_test.R
tests/: testthat.R
tools/: get-win-triple.R  lib-sums.tsv  prep-lib.R
vignettes/: about.Rmd  custom-functions.Rmd  differences-with-python.Rmd  foo.Rmd  install.Rmd  performance.Rmd  polars.Rmd  rpolars.Rmd  tips_and_tricks.Rmd  userguide.Rmd
(+1345 files in other folders)
