[package]
name = "r-polars"
version = "1.0.0-rc.1"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
# also includes simd
nightly = ["polars/nightly"]

[profile.release]
panic = "unwind"

[profile.dist-release]
inherits = "release"
codegen-units = 1
lto = "fat"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
ciborium = "0.2"
either = "1.15"
flume = "0.11"
polars-core = { git = "https://github.com/pola-rs/polars.git", rev = "171c8474b11e9e62209f5f7f03615f24fe62da98" }
polars-error = { git = "https://github.com/pola-rs/polars.git", rev = "171c8474b11e9e62209f5f7f03615f24fe62da98" }
savvy = { version = "0.8", features = ["use-custom-error"] }
serde_json = "1"
state = "0.6"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2"

# These features are enabled by default, but not supported on emscripten
# <https://github.com/pola-rs/polars/blob/93ceaccdac6f05c9b07a5117f3a4a90c238dbd29/.github/workflows/test-pyodide.yml#L40-L45>
[target.'cfg(not(target_os = "emscripten"))'.dependencies.polars]
git = "https://github.com/pola-rs/polars.git"
rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
default-features = false
features = [
    "aws",
    "azure",
    "cloud",
    "csv",
    "extract_jsonpath",
    "gcp",
    "http",
    "ipc",
    "ipc_streaming",
    "json",
    "parquet",
]

[target.'cfg(not(target_os = "emscripten"))'.dependencies.polars-lazy]
git = "https://github.com/pola-rs/polars.git"
rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
default-features = false
features = ["new_streaming"]

[target.'cfg(not(target_os = "emscripten"))'.dependencies.polars-mem-engine]
git = "https://github.com/pola-rs/polars.git"
rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
default-features = false
features = ["csv", "ipc", "json", "parquet"]

[dependencies.polars]
git = "https://github.com/pola-rs/polars.git"
rev = "171c8474b11e9e62209f5f7f03615f24fe62da98"
default-features = false
features = [
    "abs",
    "approx_unique",
    "arg_where",
    "array_any_all",
    "array_count",
    "array_to_struct",
    "asof_join",
    "binary_encoding",
    "bitwise",
    "business",
    "concat_str",
    "cross_join",
    "cse",
    "cum_agg",
    "cutqcut",
    "decompress",
    "diagonal_concat",
    "diff",
    "dot_diagram",
    "dot_product",
    "dtype-full",
    "dynamic_group_by",
    "ewma",
    "ewma_by",
    "extract_groups",
    "find_many",
    "fmt",
    "fused",
    "hist",
    "iejoin",
    "interpolate",
    "interpolate_by",
    "is_between",
    "is_first_distinct",
    "is_in",
    "is_last_distinct",
    "is_unique",
    "lazy",
    "list_any_all",
    "list_count",
    "list_drop_nulls",
    "list_eval",
    "list_gather",
    "list_sample",
    "list_sets",
    "list_to_struct",
    "log",
    "merge_sorted",
    "meta",
    "mode",
    "moment",
    "month_end",
    "month_start",
    "offset_by",
    "partition_by",
    "pct_change",
    "peaks",
    "pivot",
    "product",
    "propagate_nans",
    "random",
    "range",
    "rank",
    "reinterpret",
    "repeat_by",
    "replace",
    "rle",
    "rolling_window",
    "rolling_window_by",
    "round_series",
    "row_hash",
    "search_sorted",
    "semi_anti_join",
    "serde",
    "serde-lazy",
    "sign",
    "sql",
    "strings",
    "string_encoding",
    "string_pad",
    "string_reverse",
    "string_to_integer",
    "temporal",
    "timezones",
    "to_dummies",
    "top_k",
    "trigonometry",
    "unique_counts",
]

[target.'cfg(all(any(not(target_family = "unix"), target_os = "emscripten", allocator = "mimalloc")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(all(target_family = "unix", not(target_os = "macos"), not(target_os = "emscripten"), not(allocator = "mimalloc")))'.dependencies]
jemallocator = { version = "0.5", features = [
    "disable_initial_exec_tls",
    "background_threads",
] }

[target.'cfg(all(target_family = "unix", target_os = "macos", not(allocator = "mimalloc")))'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
